# react-native-cpp-pi

./: .gitignore  .prettierrc.js  App.tsx  CalculatePi.tsx  CalculatePiModule.h  README.md  app.json  package.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  settings.gradle
android/app/: _BUCK  build.gradle
android/app/src/debug/java/com/cpppi/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/cpppi/: MainActivity.java  MainApplication.java
android/app/src/main/java/com/cpppi/calculatepi/: CalculatePiModule.kt  CalculatePiPackage.kt
android/app/src/main/res/values/: strings.xml
cpp/: pi.cpp  pi.h
ios/: Podfile
ios/CppPi/: AppDelegate.m  CalculatePiModule.h  CalculatePiModule.mm  Info.plist  LaunchScreen.storyboard
ios/CppPi.xcodeproj/: project.pbxproj
ios/CppPi.xcodeproj/xcshareddata/xcschemes/: CppPi.xcscheme
ios/CppPi.xcworkspace/: contents.xcworkspacedata
ios/CppPiTests/: CppPiTests.m
src/: App.tsx  Button.tsx  CalculatePi.tsx
